--- a/.github/workflows/run-lint-check.yml
+++ b/.github/workflows/run-lint-check.yml
@@ -1,3 +1,7 @@
+on:
+  pull_request:
+    branches: [ master ]
+
 jobs:
   call-lint-check:
     uses: Skill-Forge-Project/ci-templates/.github/workflows/lint-check.yml@master
